# necessary for cargo-about
cargo-features = ["resolver"]
[package]
name = "nvg_gl_backend"
version = "0.5.11"
authors = ["tasogare3710 <tasogare.android@gmail.com>"]
license = "MIT"
edition = "2018"
resolver = "2"

[dependencies.nvg]
git = "https://github.com/tasogare3710/nvg.git"

[dependencies.slab]
version = "0.4.3"

[dependencies.gl]
version = "0.14.0"

[dependencies.anyhow]
version= "1.0.40"

[dev-dependencies.glutin]
version = "0.26.0"

[dev-dependencies.chrono]
version = "0.4.19"

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.lazy_static]
version = "1.4.0"
